tests/Fixtures/Torture/Bad/arith_str.g
// EXPECT G004
import String;
kernel { entry func Main() { let String s="a"; let x = s - 1; } }
